update laman surat

--- a/NOTIFICATION/application/views/surat1.html
+++ b/NOTIFICATION/application/views/surat1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p>Directory access is forbidden. uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu</p>
+<p>Directory access is forbiddhhhhhhhhhhhhhhhhhhhhen.hvr;</p>
 
 </body>
 </html>
