--- a/NOTIFICATION/application/views/surat3.html
+++ b/NOTIFICATION/application/views/surat3.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -165,6 +164,13 @@
   {
   	color: white;
   }
+  h5
+  {
+  	text-align: center;
+  	text-decoration: underline;
+  	font-size: 17px;
+  	font-family: "Times New Roman", Times, serif;
+  }
 
   p 
   {
@@ -190,7 +196,15 @@
     	text-align: center;
     	margin: 30px 15px 100px 600px;
 	}
-	
+	input[type=text] {
+	    width: 100%;
+	    padding: 10px 10px;
+	    margin: 8px 0;
+	    box-sizing: border-box;
+	    border:none;
+	    border-bottom: 1px solid black;
+	    text-align: center;
+	}
   </style>
 
   <script src="<?php echo base_url()?>assets/js/jquery.min.js"></script>
@@ -304,13 +318,13 @@
 	</script>
 	
 	<div class="container">
-	    <h3>SURAT DOKTER - Surat Keterangan Bebas Narkoba</h3>
+	    <h3>SURAT DOKTER - Surat Keterangan Sehat Jiwa</h3>
 	  	<hr>
 	  	<div class="p1">
 		<div class="row">
 	      <div class="col-md-12 personal-info ">
-	        <h2>SURAT KETERANGAN BEBAS NARKOBA</h2>
-	        <h4>Nomor : 001/YSMI/SKBN-1/2017</h4><br><br>
+	        <h2>SURAT KETERANGAN SEHAT JIWA</h2>
+	        <h4>Nomor : 001/YSMI/SKKO-1/2017</h4><br><br>
 	        <p>Yang bertanda tangan di bawah ini kepala klinik YSMI (Sehat Mental Indonesia) daerah Cirengot Ujung Berung kodya bandung Jawa Barat menerangkan bahwa</p><br>
 
 			<form class="form-horizontal" action="/action_page.php">
@@ -330,9 +344,9 @@
 			      <label class="control-label col-sm-4">Jenis Kelamin:</label>
 			      <div class="col-sm-5 ui-select">
 	                <select id="user_time_zone" class="form-control">
-	                  <option value="Alaska"></option>  
-	                  <option value="Alaska">Laki-laki</option> 
-	                  <option value="Alaska">Perempuan</option>
+	                  <option value=""></option>  
+	                  <option value="">Laki-laki</option> 
+	                  <option value="">Perempuan</option>
 	                 </select>
 	                 </div>        
 			    </div>			    
@@ -350,42 +364,55 @@
 			    </div>
 			</form>
 
-	        <p>Telah dilakukan pemeriksaan beberapa Zat Adiktif / Narkoba pada Urine yang bersangkutan dengan hasil sebagai berikut :</p><br>
-
-	        <form class="form-horizontal" action="/action_page.php">
-		        <div class="form-group">
-				      <label class="control-label col-sm-6">A. Amphethamine :</label>
-				      <div class="col-sm-2 ui-select">
-		                <select id="user_time_zone" class="form-control">
-		                  <option ></option>  
-		                  <option >NEGATIVE</option> 
-		                  <option >POSITIVE</option>
-		                 </select>
-		               </div>        
-				</div>	
-		        <div class="form-group">
-				      <label class="control-label col-sm-6">B. Aphiate / Morpine  :</label>
-				      <div class="col-sm-2 ui-select">
-		                <select id="user_time_zone" class="form-control">
-		                  <option ></option>  
-		                  <option >NEGATIVE</option> 
-		                  <option >POSITIVE</option>
-		                 </select>
-		              </div>        
-				</div>	
+			<form>
 				<div class="form-group">
-				      <label class="control-label col-sm-6">C. Cannobinol / THC :</label>
-				      <div class="col-sm-2 ui-select">
-		                <select id="user_time_zone" class="form-control">
-		                  <option ></option>  
-		                  <option >NEGATIVE</option> 
-		                  <option >POSITIVE</option>
-		                 </select>
-		              </div>        
-				</div>	
+			      <label class="control-label col-sm-5">Setelah melalui pemeriksaan, dinyatakan</label>
+			      <div class="col-sm-2 ui-select">
+	                <select id="user_time_zone" class="form-control">
+	                  <option value=""></option>  
+	                  <option value="">SEHAT</option> 
+	                  <option value="">SAKIT</option>
+	                 </select>
+	                 </div>        
+			    </div>
 			</form>
-	        <p>Kesimpulan : yang bersangkutan bebas dari Zat Adiktif / Narkoba tersebut<br><br>
-	        Demikian surat keterangan ini dibuat dengan sebenarnya untuk dapat dipergunakan sebagaimana mestinya.</p><br>
+
+			<br><br>
+	        <p>Demikian surat sehat ini dibuat untuk dapat dipergunakan sebagaimana mestinya.</p><br>
+	        <h5>KETERANGAN</h5>
+			<form class="form-horizontal center" action="/action_page.php">
+			    <div class="form-group">
+			      <label class="control-label col-sm-5 left" > Tinggi Badan</label>
+			      <div class="col-sm-3">
+			        <input type="email" class="form-control" >
+			      </div>
+			    </div>
+			    <div class="form-group">
+			      <label class="control-label col-sm-5"> Berat Badan</label>
+			      <div class="col-sm-3">          
+			        <input type="email" class="form-control" >
+			      </div>
+			    </div>
+			    <div class="form-group">
+			      <label class="control-label col-sm-5"> Tekanan Darah</label>
+			      <div class="col-sm-3">          
+			        <input type="email" class="form-control">
+			      </div>
+			    </div>
+			    <div class="form-group">
+			      <label class="control-label col-sm-5">Golongan Darah</label>
+			      <div class="col-sm-3 ui-select">
+	                <select id="user_time_zone" class="form-control">
+	                  <option value=""></option>  
+	                  <option value="">A</option> 
+	                  <option value="">AB</option>
+	                  <option value="">B</option> 
+	                  <option value="">O</option>
+	                 </select>
+	                 </div>        
+			    </div>
+			</form>
+			
 
 	        <div class="p2"> 
 	        	<p>Bandung, <input type="date" id="datepicker"></p>
@@ -404,4 +431,3 @@
 	</div>
 	<hr>
 </body>
-</html>
