--- a/CHATv2/asset/css/modified.css
+++ b/CHATv2/asset/css/modified.css
@@ -79,11 +79,15 @@ body{
   background-color: #F00;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
-/*  -webkit-animation: blinkRed 0.5s infinite;
-  -moz-animation: blinkRed 0.5s infinite;
-  -ms-animation: blinkRed 0.5s infinite;
-  -o-animation: blinkRed 0.5s infinite;
-  animation: blinkRed 0.5s infinite;*/
+}
+
+.msg_data .msg_image{
+	width: 100%;
+    height: auto !important;
+}
+
+.inherit_size{
+	font-size: 6em !important;
 }
 
 .hiddened{
